# WAF

./: .gitignore  CMakeLists.txt  README.md  generate_traffic.py
certs/: placeholder
config/: rules.conf
doc/: Diagramme_sequence_tcp_steam.drawio  architecture.puml  sequence.puml
inc/: backend_connection.h  client_handler.h  config.h  firewall.h  internal_log.h  proxy.h  request_parser.h  server.h
src/: backend_connection.c  client_handler.c  firewall.c  internal_log.c  main.c  proxy.c  request_parser.c  server.c
src/headers/: server.h
tests/: test_firewall.c  test_internal_log.c  test_parser.c
